--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@mapbox/point-geometry": "^0.1.0",
