--- a/example/package.json
+++ b/example/package.json
@@ -4,16 +4,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ../node_modules/react-scripts/bin/react-scripts.js start",
-    "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
-    "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
-    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
+    "dev": "preact watch"
   },
   "dependencies": {
     "google-map-react": "link:..",
-    "react": "link:../node_modules/react",
-    "react-dom": "link:../node_modules/react-dom",
-    "react-scripts": "link:../node_modules/react-scripts",
+    "preact": "link:../node_modules/react",
+    "preact-compat": "link:../node_modules/react-dom",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
